changed width and height back so it fixes the cutting off

--- a/styles/passover-game.css
+++ b/styles/passover-game.css
@@ -82,8 +82,8 @@ img {
 
 .spinner {
   padding-top: 20%;
-  height: 300px;
-  width: 800px;
+  height: 400px;
+  width: 900px;
   /* height: 20em;
   width: 40em; */
 }
